Overflow fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,7 @@ nav a:hover {
   opacity: 100% !important;
 }
 
-.home-body {
+.home-section {
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -293,8 +293,10 @@ nav a:hover {
 .contact-section {
   background: black;
   overflow: hidden;
-  display: flex;
   flex-direction: column;
+}
+
+.contact-section nav ul {
   justify-content: center;
 }
 
